<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_title_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/menu_title_sort_by_name" />
            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/menu_title_sort_by_created_date" />
        </menu>
    </item>

    <item
        android:id="@+id/action_hide_complete_tasks"
        android:checkable="true"
        android:title="@string/menu_title_hide_completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_completed_tasks"
        android:title="@string/menu_title_delete_all_completed_tasks"
        app:showAsAction="never" />

</menu>
